# norelinorth_ai_advanced_compliance

./: .eslintrc.json  .pre-commit-config.yaml  CICD_STATUS.md  DEMO_DATA.md  MARKETPLACE_FORM_FIELDS.txt  MARKETPLACE_PROFILE.md  MARKETPLACE_READY_FINAL.md  MARKETPLACE_SUBMISSION_QUICK_REFERENCE.md  MARKETPLACE_SUBMISSION_SUMMARY.md  PRIVACY_POLICY.md  README.md  SCREENSHOT_GUIDE.md  TERMS_OF_SERVICE.md  TEST_FIXES_SUMMARY.md  pyproject.toml  setup.py  test_semantic_search_integration.py
.github/workflows/: linters.yml  server-tests-mariadb.yml
advanced_compliance/: hooks.py  install.py  uninstall.py
advanced_compliance/advanced_compliance/: check_demo_data.py  clear_old_demo.py  help.py  nuke_all_demo.py  permissions.py
advanced_compliance/advanced_compliance/demo/: finance_accounting_data.py  generate_demo_data.py
advanced_compliance/advanced_compliance/doctype/ai_provider_settings/: ai_provider_settings.json  ai_provider_settings.py
advanced_compliance/advanced_compliance/doctype/compliance_alert/: compliance_alert.py
advanced_compliance/advanced_compliance/doctype/compliance_graph_entity/: compliance_graph_entity.py
advanced_compliance/advanced_compliance/doctype/compliance_graph_path/: compliance_graph_path.py
advanced_compliance/advanced_compliance/doctype/compliance_graph_relationship/: compliance_graph_relationship.py
advanced_compliance/advanced_compliance/doctype/compliance_settings/: compliance_settings.py
advanced_compliance/advanced_compliance/doctype/control_activity/: control_activity.js  control_activity.py  control_activity_dashboard.py
advanced_compliance/advanced_compliance/doctype/control_category/: control_category.py
advanced_compliance/advanced_compliance/evidence/: capture.py
advanced_compliance/advanced_compliance/intelligence/: __init__.py
advanced_compliance/advanced_compliance/knowledge_graph/: __init__.py  analysis.py  query.py  sync.py
advanced_compliance/advanced_compliance/regulatory_feeds/: api.py  scheduler.py
advanced_compliance/advanced_compliance/tasks/: daily.py  monthly.py  weekly.py
advanced_compliance/advanced_compliance/tests/: setup_test_data.py  test_ai_intelligence.py  test_bug_fixes.py  test_bug_fixes_verification.py  test_compliance_settings.py  test_control_activity.py  test_evidence_capture.py  test_integration_workflows.py  test_knowledge_graph.py  test_phase6.py  test_regulatory_feeds.py  test_risk_register.py  test_test_execution.py
advanced_compliance/advanced_compliance/utils/: __init__.py  cache.py  data_exchange.py  formatting.py  graph_sync.py  optimizations.py
advanced_compliance/patches/: add_performance_indexes.py
advanced_compliance/public/js/: advanced_compliance.js
(+50 files in other folders)
