[project]
name = "advanced_compliance"
version = "1.0.0"
description = "Noreli North Advanced Compliance - Next-generation GRC with Knowledge Graph and AI Intelligence for ERPNext"
authors = [
    {name = "Noreli North"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["frappe", "erpnext", "compliance", "grc", "sox", "coso", "risk-management", "internal-controls"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Frappe",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.urls]
Homepage = "https://github.com/norelinorth/advanced_compliance"
Documentation = "https://github.com/norelinorth/advanced_compliance/wiki"
Repository = "https://github.com/norelinorth/advanced_compliance.git"
Issues = "https://github.com/norelinorth/advanced_compliance/issues"

[project.optional-dependencies]
ai = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "joblib>=1.3.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise from
    "B905",  # zip strict
    "E402",  # module level import not at top
    "F401",  # unused imports (common in __init__.py)
    "W191",  # indentation contains tabs (Frappe standard)
    "E101",  # indentation contains mixed spaces and tabs
    "C401",  # unnecessary generator (can be set comprehension)
    "C403",  # unnecessary list comprehension (can be set comprehension)
    "F841",  # local variable assigned but never used
    "F601",  # dictionary key literal repeated
    "B007",  # loop control variable not used within loop body
]

[tool.ruff.lint.isort]
known-first-party = ["advanced_compliance"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
